# manazir

./: .gitignore  CMakeLists.txt  CMakePresets.json  aabb.h  bvh.h  camera.h  hittable.h  image.h  main.cpp  material.h  perlin.h  quad.h  ray.h  sphere.h  texture.h  utilities.h
